Fixed contrast error

--- a/css/style.css
+++ b/css/style.css
@@ -88,7 +88,7 @@ div {
 }
 
 .green {
-    background-color: #00EB00;
+    background-color: #008500;
     text-align: left;
     border-style: solid;
     border: 2px 5px 0px 0px;
